[package]
name = "gli"
version = "0.1.0"
authors = ["Clement Delafargue <clement@delafargue.name>"]

[dependencies]
nom = "^3.2"
url = "1.5.1"
futures = "0.1"
git2 = "^0.6"
hyper = "0.11"
hyper-tls = "0.1.2"
tokio-core = "0.1"
serde_json = "*"
xdg = "^2.1"
open = "1.2.0"
structopt = "0.1.0"
structopt-derive = "0.1.0"
itertools = "0.7.2"
gitlab = "0.1001.0"